Remove jpg and add png, then correct alignment

--- a/app/assets/stylesheets/components/_home_feature.scss
+++ b/app/assets/stylesheets/components/_home_feature.scss
@@ -5,14 +5,14 @@
 .home-feature__content {
   @extend %clearfix;
   padding: $baseline-unit*6 0 0 0;
-  background: transparent image_url('home-illustration.jpg') 0 118px no-repeat;
+  background: transparent image_url('homeimage.png') 10px 125px no-repeat;
 
   @include respond-to($mq-m) {
-    background-position: 0 0;
+    background-position: 15px 26px;
   }
 
   @include respond-to($mq-l) {
-    background-position: 0 100%;
+    background-position: 15px 100%;
     padding: $baseline-unit*8 0 $baseline-unit*4 0;
   }
 }
